{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 58,
  "lineage": "80d42db8-e5d4-aecb-9d19-facc0c6278b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "card-website-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-0e891b7398a1660fd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e891b7398a1660fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "card-website-instance-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e6df3f426c3f4c7",
            "private_dns": "ip-10-10-0-40.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.40",
            "public_ip": "3.110.214.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02efc63cee298ab1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5de3cdf29d63ea0",
            "tags": {
              "Name": "card-wesbsite-instance-01"
            },
            "tags_all": {
              "Name": "card-wesbsite-instance-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09246d7e5a3ddd418"
            ]
          },
          "dependencies": [
            "aws_key_pair.card-website-instance-key",
            "aws_security_group.allow_ssh",
            "aws_subnet.card-website-subnet-1a",
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "card-website-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:061685900439:instance/i-0a8c63c4b79501aab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8c63c4b79501aab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "card-website-instance-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0beb7c638a968e888",
            "private_dns": "ip-10-10-1-121.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.121",
            "public_ip": "43.204.110.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b770044f00d7b55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac0c4114370d1274",
            "tags": {
              "Name": "card-wesbsite-instance-02"
            },
            "tags_all": {
              "Name": "card-wesbsite-instance-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09246d7e5a3ddd418"
            ]
          },
          "dependencies": [
            "aws_key_pair.card-website-instance-key",
            "aws_security_group.allow_ssh",
            "aws_subnet.card-website-subnet-1b",
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "card-website-vpc-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:internet-gateway/igw-01626d41a0f840e9b",
            "id": "igw-01626d41a0f840e9b",
            "owner_id": "061685900439",
            "tags": {
              "Name": "card-website-vpc-IG"
            },
            "tags_all": {
              "Name": "card-website-vpc-IG"
            },
            "vpc_id": "vpc-069c74e16642ec8dc"
          },
          "dependencies": [
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "card-WB-RT-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:route-table/rtb-01e9650b11e82a5f7",
            "id": "rtb-01e9650b11e82a5f7",
            "owner_id": "061685900439",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "card-WB-RT-private"
            },
            "tags_all": {
              "Name": "card-WB-RT-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-069c74e16642ec8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "card-WB-RT-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:route-table/rtb-0aae4ffba10a8bb23",
            "id": "rtb-0aae4ffba10a8bb23",
            "owner_id": "061685900439",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01626d41a0f840e9b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "card-WB-RT-public"
            },
            "tags_all": {
              "Name": "card-WB-RT-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-069c74e16642ec8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.card-website-vpc-IG",
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card-WB-RT-association-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0851f2a150f5743f7",
            "route_table_id": "rtb-0aae4ffba10a8bb23",
            "subnet_id": "subnet-0a5de3cdf29d63ea0"
          },
          "dependencies": [
            "aws_internet_gateway.card-website-vpc-IG",
            "aws_route_table.card-WB-RT-public",
            "aws_subnet.card-website-subnet-1a",
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card-WB-RT-association-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027298330f0dd27bd",
            "route_table_id": "rtb-0aae4ffba10a8bb23",
            "subnet_id": "subnet-0ac0c4114370d1274"
          },
          "dependencies": [
            "aws_internet_gateway.card-website-vpc-IG",
            "aws_route_table.card-WB-RT-public",
            "aws_subnet.card-website-subnet-1b",
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card-WB-RT-association-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051a1d2aba27a6cf4",
            "route_table_id": "rtb-01e9650b11e82a5f7",
            "subnet_id": "subnet-088626508ede54464"
          },
          "dependencies": [
            "aws_route_table.card-WB-RT-private",
            "aws_subnet.card-website-subnet-1c",
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:security-group/sg-09246d7e5a3ddd418",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09246d7e5a3ddd418",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "061685900439",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-069c74e16642ec8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-website-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-0a5de3cdf29d63ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5de3cdf29d63ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Card-website-subnet-1a"
            },
            "tags_all": {
              "Name": "Card-website-subnet-1a"
            },
            "vpc_id": "vpc-069c74e16642ec8dc"
          },
          "dependencies": [
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-website-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-0ac0c4114370d1274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac0c4114370d1274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Card-website-subnet-1b"
            },
            "tags_all": {
              "Name": "Card-website-subnet-1b"
            },
            "vpc_id": "vpc-069c74e16642ec8dc"
          },
          "dependencies": [
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-website-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:subnet/subnet-088626508ede54464",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088626508ede54464",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061685900439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Card-website-subnet-1c"
            },
            "tags_all": {
              "Name": "Card-website-subnet-1c"
            },
            "vpc_id": "vpc-069c74e16642ec8dc"
          },
          "dependencies": [
            "aws_vpc.card-website-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "card-website-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061685900439:vpc/vpc-069c74e16642ec8dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a4f532031b115232",
            "default_route_table_id": "rtb-0aa037c8061eaf4d5",
            "default_security_group_id": "sg-0c875882903915756",
            "dhcp_options_id": "dopt-04fb04627013b5d59",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069c74e16642ec8dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa037c8061eaf4d5",
            "owner_id": "061685900439",
            "tags": {
              "Name": "Card-website-vpc"
            },
            "tags_all": {
              "Name": "Card-website-vpc"
            }
          }
        }
      ]
    }
  ]
}